Added two suits docker/local

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java-version>11</java-version>
         <maven-surefire-plugin-version>3.1.0</maven-surefire-plugin-version>
         <aspectj.version>1.9.2</aspectj.version>
+        <suite>src/test/resources/docker.xml</suite>
     </properties>
 
     <dependencies>
@@ -107,7 +108,7 @@
                 <version>${maven-surefire-plugin-version}</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/docker.xml</suiteXmlFile>
+                        <suiteXmlFile>${suite}</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
