--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
         <java-version>11</java-version>
         <maven-surefire-plugin-version>3.1.0</maven-surefire-plugin-version>
         <aspectj.version>1.9.2</aspectj.version>
-        <suite>src/test/resources/local.xml</suite>
     </properties>
 
     <dependencies>
@@ -108,7 +107,7 @@
                 <version>${maven-surefire-plugin-version}</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>${suite}</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/local.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
